<resources>
    <string name="app_name">Demo</string>


    <!--　通用　-->
    <string name="save">保存</string>
    <string name="cancel">取消</string>

    <!-- 个人设置界面 -->
    <string name="default_user_name">绝命毒师</string>
    <string name="default_user_id">16kMdHAuBkszZSCN3QZGWaLLkwzkXfczQK</string>
    <string name="setting_user_safety">账户与安全</string>
    <string name="setting_secret">隐私</string>
    <string name="setting_general">通用</string>
    <string name="setting_help">帮助与支持</string>
    <string name="setting_about">关于</string>
    <string name="setting_user_out">退出</string>
    <string name="setting_user_id">ID</string>

    <!-- 二维码界面 -->
    <string name="rqcode_title">我的二维码</string>
    <string name="rqcode_sao">扫码</string>

    <!-- 个人资料界面-->
    <string name="user_user_header">头像</string>
    <string name="user_user_nick">昵称</string>
    <string name="user_user_id">ID</string>
    <string name="user_user_title">个人资料</string>

    <!-- 头像预览界面 -->
    <string name="user_header_title">头像</string>

    <!-- 修改信息界面-->
    <string name="update_ifo_title">修改昵称</string>
    <string name="update_ifo_save">保存</string>
    <string name="update_ifo_default">请输入修改内容</string>

    <!--　账户与安全界面 -->
    <string name="safety_title">账户与安全</string>
    <string name="safety_phone">手机号</string>
    <string name="safety_login_password">登陆密码</string>
    <string name="safety_pay_setting">支付设置</string>
    <string name="safety_lock_gesture">锁屏手势</string>
    <string name="safety_lock_no_open">未开启</string>
    <string name="safety_secret_backup">密钥备份</string>
    <string name="safety_default_phone">18610022520</string>

    <!-- 账户与安全　：　手机号相关 -->
    <string name="safety_phone_title">绑定手机号</string>
    <string name="safety_phone_yours">您的手机号</string>
    <string name="safety_phone_bind">绑定新的手机号</string>
    <string name="safety_phone_unbind">解除绑定</string>
    <string name="safety_phone_cancel">取消</string>
    <string name="safety_phone_sure">确定</string>
    <string name="safety_phone_update_title">修改手机</string>
    <string name="safety_phone_update_phone">更改手机号</string>
    <string name="safety_phone_update_edit">请输入新的手机号</string>
    <string name="safety_phone_update_desc">更换手机号后下一次请用新号码登录\n一个手机号只能绑定一个账户</string>
    <string name="safety_phone_update_default">+86</string>
    <string name="safety_phone_update_validate">验证号码</string>
    <string name="safety_phone_update_send_msg">验证码已经发送到你的手机</string>
    <string name="safety_phone_update_msg">手机号码已更新</string>
    <string name="safety_phone_new_unbind">未绑定手机</string>
    <string name="safety_phone_update_next">下一步</string>
    <string name="safety_phone_name_hint">电话号码</string>
    <string name="safety_phone_validate_name">验证码</string>

    <!-- 修改登陆密码-->
    <string name="update_ifo_pass_title">修改登录密码</string>
    <string name="update_ifo_pass_desc">您的私钥将使用新密码重新加密</string>
    <string name="update_ifo_pass_edit">请输入新密码</string>
    <string name="update_ifo_pass_tip">密码提示</string>
    <string name="update_ifo_pass_tip_default">a****6</string>
    <string name="update_ifo_pass_validate">验证您的登录密码</string>

    <!--　支付设置页面　-->
    <string name="pay_setting_title">支付设置</string>
    <string name="pay_setting_pay_password">交易密码</string>
    <string name="pay_setting_pay_password_next">重置密码</string>
    <string name="pay_setting_pay_fingerprint">指纹支付</string>
    <string name="pay_setting_pay_free_password">免密支付</string>
    <string name="pay_setting_forward_pay">转账手续费</string>
    <string name="pay_setting_forward_pay_default">￥0.01</string>
    <string name="pay_setting_pay_password_edit">请设置你的支付密码</string>
    <string name="pay_setting_pay_six_num">请输入6位数字</string>
    <string name="pay_setting_pay_password_edit_twice">请再输入一次</string>
    <string name="pay_setting_forward_title">转账手续费</string>
    <string name="pay_setting_forward_desc">转账手续费由比特币网络收取\n手续费越高交易确认速度越快</string>

    <!-- 手势密码 -->
    <string name="gesture_password_title">手势密码</string>
    <string name="gesture_password_update">修改手势密码</string>
    <string name="gesture_password_desc">手势密码可以防止非法用户访问沙盒中的私钥\n开启后每次进入APP都需要输入</string>
    <string name="gesture_draw_title">绘制手势密码</string>
    <string name="gesture_draw_desc">请绘制手势密码</string>
    <string name="gesture_draw_desc_next">请再输入一次</string>
    <string name="gesture_validate_title">验证原密码</string>
    <string name="gesture_validate_desc">请输入原手势密码</string>
    <string name="gesture_validate_login">使用登录密码验证</string>

    <!--私钥备份导出-->
    <string name="private_key_backup_title">私钥备份导出</string>
    <string name="private_key_backup_desc">此二维码是通过登录密码加密后的主地址私钥\n您可以备份在相册或者电子邮箱\n或是通过其他手机扫描登录\n系统会自动导入您其他的子地址私钥</string>
    <string name="private_key_save_mob">保存到手机相册</string>
    <string name="private_key_send_mail">发送到电子邮箱</string>

    <!--隐私-->
    <string name="privacy_title">隐藏</string>
    <string name="privacy_add_validate">加我为好友需要验证</string>
    <string name="privacy_auto_mail">自动同步通讯录好友</string>
    <string name="privacy_auto_last_time">最后同步时间：%1$s</string>
    <string name="privacy_auto_last_time_default">最后同步时间：2016-08-01 AM 6:22</string>
    <string name="privacy_auto_desc">手机通讯录中的好友会自动添加到你的好友列表中\n我们使用HASH算法进行匹配不保存您的电话薄信息</string>
    <string name="privacy_setting_search_me">通过手机号搜到我</string>
    <string name="privacy_setting_address_me">通过比特币地址搜到我</string>
    <string name="privacy_setting_black_name">黑名单</string>

    <!--通用-->
    <string name="general_title">通用</string>
    <string name="general_more_language">多语言</string>
    <string name="general_msg_notify">消息通知</string>
    <string name="general_msg_notify_open">已开启</string>
    <string name="general_msg_notify_close">未开启</string>
    <string name="general_setting_voice">声音</string>
    <string name="general_setting_shock">震动</string>
    <string name="general_setting_notify_desc">如果想要关闭消息通知，请到你的手机设置中进行更改</string>
    <string name="general_clear_chat_record">清空聊天记录</string>

    <!--帮助与支持-->
    <string name="help_title">帮助与支持</string>
    <array name="help_content">
        <item>Connet是款什么样的聊天APP</item>
        <item>如何保障账户和聊天的安全性</item>
        <item>什么是比特币</item>
        <item>什么是秘钥</item>
        <item>为什么会自动被人添加为好友</item>
        <item>我可以创建多少个群组</item>
        <item>我把他加入黑名单了　如何恢复</item>
    </array>

    <!--关于-->
    <string name="about_title">关于</string>
    <string name="about_version_code">版本号 V1.0</string>
    <string name="about_go_score">去评分</string>
    <string name="about_source_project">开源项目</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_version_msg">New V1.01</string>
    <string name="about_app_im">CONNECT.IM</string>

</resources>
