<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_ifo_pass_desc"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />


    <EditText
        android:id="@+id/et_pass_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_single_row"
        android:background="@drawable/border_round_no_white"
        android:layout_marginTop="5dp"
        android:minLines="1"
        android:padding="5dp"
        android:inputType="textPassword"
        android:hint="@string/update_ifo_pass_edit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_ifo_pass_tip"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/height_item_single_row"/>

    <TextView
        android:id="@+id/tv_pass_tip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_single_row"
        android:text="@string/update_ifo_pass_tip_default"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/border_round_no_white"
        android:padding="5dp"/>


</LinearLayout>
