<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/general_more_language"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_more_language"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/white">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_msg_notify"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <yuan.demo.weiget.SwitchView
                android:id="@+id/general_msg_notify"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:background="@color/white">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_setting_voice"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <yuan.demo.weiget.SwitchView
                android:id="@+id/general_setting_voice"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:background="@color/white">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_setting_shock"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <yuan.demo.weiget.SwitchView
                android:id="@+id/general_setting_shock"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/general_setting_notify_desc"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/general_clear_chat_record"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_item_single_row"
            android:text="@string/general_clear_chat_record"
            android:gravity="center"
            android:textColor="@color/black"
            android:clickable="true"
            android:background="@drawable/back_selector_gray"/>

    </LinearLayout>
</layout>