<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/height_item_single_row"/>

        <TextView
            android:id="@+id/about_version"
            android:layout_below="@+id/about_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_version_code"
            android:textColor="@color/black"
            android:layout_margin="@dimen/height_item_single_row"
            android:textSize="12sp"/>


        <RelativeLayout
            android:id="@+id/about_go_score"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_below="@+id/about_version"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_go_score"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_below="@+id/about_go_score"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            android:id="@+id/about_source_project"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/about_go_score"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_source_project"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_below="@+id/about_source_project"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            android:id="@+id/about_check_update"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/about_source_project"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_check_update"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_about_image"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version_msg"
                android:textColor="@color/text_select_bg"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/iv_about_image"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_im"
            android:textColor="@color/search_contact_color"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>
</layout>