<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="phone"
            type="String"/>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/safety_phone"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_phone"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_right_phone"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_default_phone"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/iv_right_phone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            android:id="@+id/safety_login_password"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_login_password"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            android:id="@+id/safety_pay_setting"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_pay_setting"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/line"/>

        <RelativeLayout
            android:id="@+id/safety_lock_gesture"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_lock_gesture"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_right_status"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_lock_no_open"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/iv_right_status" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/safety_secret_backup"
            style="@style/Item.SingleRow"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_selector_gray">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety_secret_backup"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@mipmap/app_right_arrow"/>

        </RelativeLayout>

    </LinearLayout>
</layout>
